syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "github.com/VlasovArtem/distributed-system-example/authors";

message Author {
  string ID = 1;
  string FirstName = 2;
  string LastName = 3;
}

message AuthorsResponse {
  repeated Author authors = 1;
}

message FindAuthorRequest {
  string ID = 1;
}

service Authors {
  rpc GetAuthors(google.protobuf.Empty) returns (AuthorsResponse);
  rpc FindAuthor(FindAuthorRequest) returns (Author);
}