syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "github.com/VlasovArtem/distributed-system-example/books";

message Book {
  string ID = 1;
  string Title = 2;
  uint32 Pages = 3;
  uint32 AuthorID = 4;
}

message BookAndAuthor {
  string ID = 1;
  string Title = 2;
  uint32 Pages = 3;
  uint32 AuthorID = 4;
  string FirstName = 5;
  string LastName = 6;
}

message BooksResponse {
  repeated Book books = 1;
}

message FindBookRequest {
  string ID = 1;
}

service Books {
  rpc GetBooks(google.protobuf.Empty) returns (BooksResponse);
  rpc FindBook(FindBookRequest) returns (Book);
  rpc AddBookAndAuthor(BookAndAuthor) returns (google.protobuf.Empty);
}